v13 stable correction alignement article mmi

--- a/wp-content/themes/steaktheme/style.css
+++ b/wp-content/themes/steaktheme/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: Portfolio 2024 |v12
+Theme Name: Portfolio 2024 |v13
 Theme URI: //
 Author: Marion MURA
 Author URI: //
-Description: Le thème développé pour mon portfolio 2024 - maj 21h30 - 23-03-24
-Version: 1.2
-Tags: portfolio v12
+Description: Le thème développé pour mon portfolio 2024 - maj 23h00 - 23-03-24
+Version: 1.3
+Tags: portfolio v13
 */
 
 /*
@@ -646,6 +646,10 @@ video {
   margin: 1.25rem;
 }
 
+.-m-\[4rem\] {
+  margin: -4rem;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -766,6 +770,10 @@ video {
 
 .mt-\[6rem\] {
   margin-top: 6rem;
+}
+
+.mt-\[4rem\] {
+  margin-top: 4rem;
 }
 
 .block {
@@ -915,6 +923,18 @@ video {
 .w-max {
   width: -moz-max-content;
   width: max-content;
+}
+
+.w-\[10rem\] {
+  width: 10rem;
+}
+
+.w-\[15rem\] {
+  width: 15rem;
+}
+
+.max-w-\[25rem\] {
+  max-width: 25rem;
 }
 
 .rotate-\[-90deg\] {
@@ -1595,6 +1615,10 @@ video {
 
   .sm\:mt-\[4rem\] {
     margin-top: 4rem;
+  }
+
+  .sm\:mt-\[2rem\] {
+    margin-top: 2rem;
   }
 
   .sm\:grid {
